upload : sql example.

--- a/src/notes/sql_examples.ipynb
+++ b/src/notes/sql_examples.ipynb
@@ -4,32 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"\"\"\n",
     "제목: [문제 제목]\n",
-    "플랫폼: [백준/프로그래머스 등]\n",
+    "플랫폼: [백준/프로그래머스/기타]\n",
     "난이도: [레벨/티어]\n",
     "URL: [문제 링크]\n",
-    "소요시간: [풀이에 걸린 시간]\n",
+    "소요시간: [풀이 시간]\n",
     "\n",
     "[문제 설명]\n",
-    "- 핵심 요구사항 정리\n",
+    "- 테이블 구조와 요구사항, 입력/출력 스펙\n",
     "\n",
     "[문제 접근]\n",
-    "1. 첫 번째 접근 방법\n",
-    "2. 시도한 방법들\n",
-    "3. 최종 해결 방법\n",
+    "1. 테이블 스키마 분석\n",
+    "2. 필요한 쿼리 문법, 조인/서브쿼리 활용\n",
+    "3. 최적화 방법(인덱스, GROUP BY, WHERE 조건 등)\n",
     "\n",
     "[시간복잡도]\n",
-    "- O(n)\n",
+    "- 일반적으로 SQL은 별도 표기 대신, 쿼리 최적화나 실행 계획을 언급\n",
     "\n",
     "[공간복잡도]\n",
-    "- O(n)\n",
+    "- 테이블 크기와 쿼리 임시 테이블 정도만 언급\n",
     "\n",
     "[회고]\n",
-    "- 어려웠던 점\n",
-    "- 새롭게 배운 점\n",
-    "- 다음에 비슷한 문제를 만났을 때 활용할 점\n",
-    "\"\"\""
+    "- 쿼리 최적화에서 겪은 문제\n",
+    "- 새로 배운 SQL 함수나 문법\n",
+    "- 향후 유사 문제 접근 시 주의 사항"
    ]
   }
  ],
